--- a/app/src/main/res/layout/activity_splash_screen1.xml
+++ b/app/src/main/res/layout/activity_splash_screen1.xml
@@ -6,27 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".SplashScreen1">
 
+
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="260dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="172dp"
-        android:layout_marginBottom="211dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnMasuk"
+        android:layout_width="409dp"
+        android:layout_height="365dp"
+        android:src="@drawable/zoom"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:layout_editor_absoluteY="104dp" />
 
     <Button
-        android:id="@+id/btnMasuk"
+        android:id="@+id/btntoMasuk"
         android:layout_width="368dp"
         android:layout_height="48dp"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="72dp"
         android:gravity="center"
+        android:onClick="toLogin"
         android:text="Masuk Akun Anda"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,16 +33,18 @@
     <Button
         android:id="@+id/btnguest"
         android:layout_width="368dp"
-        android:layout_height="48dp"
+        android:layout_height="0dp"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="4dp"
         android:gravity="center"
+        android:onClick="toGuest"
         android:text="Masuk Sebagai Tamu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.508"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
